--- a/style.css
+++ b/style.css
@@ -1,29 +1,38 @@
-body
-{
+body {
     text-align: center;
-   
-}
-.container{
-  background-color: mediumaquamarine;  
-}
-#app {
-    background-color: aliceblue;
+    background-color: black;
 }
 
-#myCarousel
-{
-    background-color: red;
+h1 {
+    font-size: 40px;
+    font-family: sans-serif;
+    font-weight: 300;
 }
 
-#myCarousel img
-{
-    height: 300px;
-    margin-top: 35px;
+#intro{
+    background-color: rgb(182, 220, 238);
 }
 
-.carousel-inner p
+#origami1{
+   background-color:lightcoral;
+}
+
+#contact_1{
+    background-color: cornflowerblue;
+}
+#contact_1 h3
 {
-    margin-top: 15px;
-    color : white;
-    font-size: 20px;
+    display: inline;
+}
+#contact_1 a
+{
+    color: white;
+    text-shadow: none;
+}
+
+.line {
+    height: 6px;
+    background-color: #000;
+    width: 70px;
+    margin: 8px auto;
 }
